# timesheet

./: .commitlintrc.yaml  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  install  prek.toml  start  started  stop  timeoff  timesheet  ts  ts.ksh  workalias
.cursor/rules/: commit-workflow.mdc  rebuild-reinstall.mdc
.github/workflows/: linter.yaml
assets/: README.md
src/: main.rs  reminder_dialog_macos.rs
