[package]
name = "ts"
version = "0.1.0"
edition = "2021"
description = "Timesheet CLI: start, stop, list, started, timeoff, workalias, install, rotate"
authors = ["Robert August Vincent II <pillarsdotnet@gmail.com>"]
license = "MIT"

[dependencies]
chrono = "0.4"
regex = "1.10"

[dev-dependencies]
tempfile = "3"
