[package]
name = "ts"
version = "0.1.0"
edition = "2021"
description = "Timesheet CLI: start, stop, list, started, timeoff, alias, rename, install, rotate, manpage"
authors = ["Robert August Vincent II <pillarsdotnet@gmail.com>"]
license = "MIT"

[dependencies]
chrono = "0.4"
libc = "0.2"
regex = "1.10"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"

[profile.release]
strip = true

[dev-dependencies]
tempfile = "3"
